# solana-civ

./: .gitignore  Anchor.toml  README.md  package.json
frontend/: .env.sample  README.md  config-overrides.js  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Console.tsx  EndTurnButton.tsx  GameMap.tsx  Terrain.tsx  TopMenu.tsx  Unit.tsx  UnitInfoWindow.tsx  VillageModal.tsx
frontend/src/context/: AnchorContext.tsx  GameStateContext.tsx  idl.ts
frontend/src/pages/: GamePage.tsx  HomePage.tsx
frontend/src/utils/: solanaUtils.ts
programs/solciv/: Anchor.toml  Cargo.toml
programs/solciv/programs/solciv/: Cargo.toml
programs/solciv/programs/solciv/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/solciv/src/: consts.rs  entrypoint.rs  error.rs  errors.rs  instruction.rs  instructions.rs  lib.rs  processor.rs  state.rs  utils.rs
programs/solciv/src/instructions/: city.rs  game.rs  mint.rs  mod.rs  npc.rs  player.rs  science.rs  unit.rs
programs/solciv/src/state/: city_buildings.rs  game_state.rs  mod.rs  resources_economy.rs  science.rs  units_combat.rs
programs/solciv/tests/: solciv.ts
tests/: solciv.ts
