[package]
name = "solciv"
version = "0.1.0"
description = "Solciv"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solciv"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["metadata"] }
